# PGPracticas123

./: CMakeLists.txt  leeme.txt  pract-pg.sln
PGUPV/: app.cpp
ej1-1/: ej1-1.vcxproj  main.cpp
ej1-2/: ej1-2.vcxproj
ej1-3/: ej1-3.vcxproj  main.cpp
ej1-4/: ej1-4.vcxproj  log.txt
ej2-1/: CMakeLists.txt  ej2-1.vcxproj  log.txt  properties.ini
ej2-2/: CMakeLists.txt  ej2-2.vcxproj  imgui.ini  log.txt  main.cpp
ej2-3/: ej2-3.vcxproj  log.txt  main.cpp
ej2-4/: CMakeLists.txt  ej2-4.vcxproj
ej2-5/: CMakeLists.txt  ej2-5.vcxproj  log.txt  main.cpp
ej2-6/: CMakeLists.txt  ej2-6.vcxproj  imgui.ini  log.txt  main.cpp
ej3-1/: ej3-1.vcxproj  log.txt  main.cpp
ej3-2/: ej3-2.vcxproj  log.txt  main.cpp
ej3-3/: ej3-3.vcxproj  log.txt  main.cpp
ej3-4/: _ffmpeg.txt  ej3-4.vcxproj  main.cpp
gui/: gui.vcxproj  imgui.ini  log.txt
librerias/guipg/: guipg.vcxproj
p0/: log.txt  main.cpp  p0.vcxproj  properties.ini
p1/: imgui.ini  log.txt  main.cpp  p1.vcxproj  properties.ini
p2/: log.txt  main.cpp  p2.vcxproj  properties.ini
p3/: CMakeLists.txt  log.txt  main.cpp  p3.vcxproj  properties.ini
recursos/modelos/car/: car.mtl
recursos/modelos/trees/tree1/: tree1.mtl
recursos/modelos/trees/tree2/: tree2.mtl
recursos/modelos/trees/tree3/: tree3.mtl
recursos/modelos/windshield2/: windshield2.mtl
